--- a/html/main.css
+++ b/html/main.css
@@ -2,6 +2,10 @@
    padding-top: 20px;
 }
 
+.left {
+   text-align: left;
+}
+
 .center {
    text-align: center;
 }
@@ -17,4 +21,8 @@
 
 img.logo {
    height: 250px;
+}
+
+.top20 {
+   margin-top: 20px;
 }
